[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Weapons/GunController.gd" type="Script" id=2]

[node name="TestGun" type="Sprite"]
scale = Vector2( 0.882135, 0.166658 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="shootTimer" type="Timer" parent="."]
one_shot = true

[node name="shootPoint" type="Position2D" parent="."]
position = Vector2( 33, 0 )
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
